--- a/docs/05/S05.05.airflow.md
+++ b/docs/05/S05.05.airflow.md
@@ -47,6 +47,9 @@ build:
 This approach allows for adding additional dependencies (like sklearn) to the base Airflow image.
 
 ## Question 3: What executor is being used in this Airflow setup and what components does it require?
+
+Executor :  manage the distribution and parallel execution of tasks across multiple worker nodes.
+
 **Answer:** This setup uses the CeleryExecutor as specified in the environment variables:
 
 ```yaml
