--- a/docs/06/S06.01.discord-bot.md
+++ b/docs/06/S06.01.discord-bot.md
@@ -1,23 +1,25 @@
 - [Discord bot](#discord-bot)
-  - [Les étapes de creation du bot](#les-étapes-de-creation-du-bot)
+  - [Les étapes de création du bot](#les-étapes-de-création-du-bot)
     - [1) Local](#1-local)
     - [2) Déployer sur une VM](#2-déployer-sur-une-vm)
     - [3) Ajouter le linting](#3-ajouter-le-linting)
   - [Demo du bot](#demo-du-bot)
-- [Le bot](#le-bot)
-  - [Créer votre bot sur le portail Discord](#créer-votre-bot-sur-le-portail-discord)
-    - [le DISCORD\_TOKEN](#le-discord_token)
-    - [L'environnement local](#lenvironnement-local)
+- [Le bot étape 1](#le-bot-étape-1)
+  - [Creez le bot sur le portaitl dev de discord](#creez-le-bot-sur-le-portaitl-dev-de-discord)
+  - [le DISCORD\_TOKEN](#le-discord_token)
+  - [L'environnement local](#lenvironnement-local)
     - [Le bot dans main.py](#le-bot-dans-mainpy)
-    - [A vous](#a-vous)
+  - [A vous](#a-vous)
       - [Le Dockerfile](#le-dockerfile)
-      - [Le compose.yaml](#le-composeyaml)
+      - [Pourquoi un docker compose.yaml alors qu'il n'y a qu'un service ?](#pourquoi-un-docker-composeyaml-alors-quil-ny-a-quun-service-)
+    - [Le compose.yaml](#le-composeyaml)
+      - [docker compose -f compose.yaml config](#docker-compose--f-composeyaml-config)
+    - [Lancer le bot](#lancer-le-bot)
     - [Inviter le bot sur le server discord](#inviter-le-bot-sur-le-server-discord)
-    - [ajouter des fonctinonalités](#ajouter-des-fonctinonalités)
-    - [Other services that could be useful for a more complex bot](#other-services-that-could-be-useful-for-a-more-complex-bot)
-    - [Multi stage builds](#multi-stage-builds)
-  - [GitHub Actions Setup](#github-actions-setup)
-  - [validate, lint, test Dockerfile and compose.yaml](#validate-lint-test-dockerfile-and-composeyaml)
+      - [Examples de services complémentaires](#examples-de-services-complémentaires)
+  - [Déploiement avec GitHub Actions](#déploiement-avec-github-actions)
+  - [Set up secrets in your GitHub repository:](#set-up-secrets-in-your-github-repository)
+    - [Version 3: Linting et validation](#version-3-linting-et-validation)
     - [Then deploy to host](#then-deploy-to-host)
   - [Running Locally with Docker](#running-locally-with-docker)
 
@@ -25,48 +27,41 @@
 
 # Discord bot
 
-Le plan de l'après midi: construire un bot Discord
+Le plan de l'après midi: **construire un bot Discord**
 
-D'abord en local, puis dans le cloud
+D'abord en local, puis dans le cloud sur un VM sur digital ocean.
 
-ce qui nous permettra d'illustrer et de pratiquer les points suivant
+Ce qui nous permettra d'illustrer et de pratiquer les points suivant
 
-- multi stage build dans Dockerfile : from alpine install python ...
-- Gestion des *secrets* avec Github secrets
 - Déploiement  with github actions (CI/CD)
+- Gestion des *secrets* avec Github secrets
 - Lint : comment améliorer la qualité de son code, appliqué aux dockerfiles compose.yaml et python
-- plusieurs stratégies pour déployer une image docker (avec ou sans docker hub).
 
-
-
-## Les étapes de creation du bot
+## Les étapes de création du bot
 
 ### 1) Local
 
-1. créer une application dans Discord Developer Portal, ouvrir un compte, remplir des pages web. facile
+1. créer une application dans Discord Developer Portal: https://discord.com/developers/applications, ouvrir un compte, remplir des pages web.
 2. prendre le script python dans la repo github : `main.py`
 3. écrire un `Dockerfile`
 4. écrire un `compose.yaml` pour docker compose
 
 Lancer le bot avec `docker compose up -d`
 
-Jouer avec le bot!
-
 ### 2) Déployer sur une VM
 
 - créer une repo github avec le code python du bot et un `readme.md`
-- prendre le fichier `deploy.yml` sur le github
+- récuperer le fichier `deploy.yml` sur le github
   - comprendre `deploy.yml`: deploy, ssh keys
   - ajouter les secrets dans github
-- push to master => et voir le déploiement
+  - recuperer le SSH key Private du server
+- push to master / main => et voir le déploiement
 
 Jouer avec le bot!
 
 ### 3) Ajouter le linting
 
-Le linting ?
-
-Ajouter des étapes de Linting et de validation des fichiers dockerfile, compose.yaml et python
+Ajouter des étapes de Linting et de validation des fichiers dockerfile, compose.yaml et python au fichier de déploiement.
 
 
 ## Demo du bot
@@ -79,7 +74,7 @@ quelques commandes
 - /roll 2d6
 
 
-# Le bot
+# Le bot étape 1
 
 Sur votre local créez un nouveau repertoire
 
@@ -88,20 +83,21 @@ mkdir discord-bot
 cd discord_bot
 ```
 
+## Creez le bot sur le portaitl dev de discord
 
-## Créer votre bot sur le portail Discord
+Créer votre bot sur le portail Discord
 
-1. Go to the Discord Developer Portal : <https://discord.com/developers/applications>
-2. Click "New Application" and give it a name
-3. Go to the "Bot" tab and click "Add Bot"
-4. Under the bot's username, click "Copy" to copy your bot's token `DISCORD_TOKEN`
+1. Allez sur le Portail Développeur Discord : https://discord.com/developers/applications
+2. Cliquez sur "New Application" (Nouvelle Application) et donnez-lui un nom
+3. Allez dans l'onglet "Bot" et cliquez sur "Add Bot" (Ajouter un Bot)
+4. Sous le nom d'utilisateur du bot, cliquez sur "Copy" (Copier) pour copier le  DISCORD_TOKEN de votre bot
 
 
-### le DISCORD_TOKEN
+## le DISCORD_TOKEN
 
 Il faut garder le `DISCORD_TOKEN` secret!
 
-Pour cela dans le repertoire `discord-bot`, creez une fichier `.env` et ajoutez la ligne
+Pour cela dans le répertoire `discord-bot`, creez une fichier `.env` et ajoutez la ligne
 
 ```text
 DISCORD_TOKEN=<le token>
@@ -109,16 +105,14 @@ DISCORD_TOKEN=<le token>
 
 Gérer le token pour qu'il reste secret et que le fichier `.env` ne soit pas copié dans le container va être un fil rouge du projet.
 
-
-### L'environnement local
+## L'environnement local
 
 Nous n'avons pas besoin d'installer python puisque nous avons docker!
 
 Mais nous avons quand meme besoin du script python du bot : `main.py`
 
-récupérez le depuis https://github.com/SkatAI/ynov-docker/blob/master/apps/discord-bot/src/main.py
-
-Par convention on met les fichiers python dans un sous repertoire `src`.
+- Récupérez le depuis https://github.com/SkatAI/ynov-docker/blob/master/apps/discord-bot/src/main.py
+- Par convention on met les fichiers python dans un sous repertoire `src`.
 
 Dans un fichier `requirements.txt` ajoutez la ligne
 
@@ -143,11 +137,11 @@ Le contenu de votre repertoire projet `discord-bot` doit ressembler à
 
 Dans le fichier main.py
 
-une seule commande : `/hello`
+Une seule commande est définie : `/hello`
 
-[TODO] commenter et proposer des autres commandes
+ChatGPT est très bon pour proposer d'autres actions.
 
-### A vous
+## A vous
 
 Vous allez maintenant écrire les fichier suivants
 
@@ -165,19 +159,17 @@ le plus simple est
 - le workdir est '/app'
 - de copier le requirements.txt et d'installer les librairies avec `pip install`
 - de copier le code `main.py`
-- et de l'executer avec `python main.py` de préference avec une syntaxe **Exec** (définit la commande et ses arguments sous forme d'array)
+- et de l'executer avec `python main.py` de préférence avec une syntaxe **Exec** (définit la commande et ses arguments sous forme d'array)
 
 
-#### Le compose.yaml
 
+#### Pourquoi un docker compose.yaml alors qu'il n'y a qu'un service ?
 
-Pourquoi un docker compose.yaml alors qu'il n'y a qu'un service ?
-
-* Gestion des variables d'environnement
-  - Dans votre cas, Docker Compose fournit un moyen propre d'injecter la variable d'environnement `DISCORD_TOKEN`.
+- Gestion des variables d'environnement
+  - Docker Compose fournit un moyen propre d'injecter la variable d'environnement `DISCORD_TOKEN`.
   - Vous pouvez utiliser un fichier `.env` avec Compose automatiquement, alors qu'avec Docker seul, vous devriez les spécifier en ligne de commande ou utiliser `--env-file`.
 
-* Commandes standardisées
+- Commandes standardisées
   - Au lieu de se souvenir des commandes Docker build/run avec tous leurs paramètres, vous pouvez utiliser :
 
  ```bash
@@ -185,19 +177,17 @@ Pourquoi un docker compose.yaml alors qu'il n'y a qu'un service ?
  docker compose down         # Arrêter et supprimer les conteneurs
  ```
 
-* Scalabilité future
+- Scalabilité future
   - Si vous décidez plus tard d'ajouter d'autres services (comme une base de données ou un cache), vous n'aurez pas besoin de refactorer.
   - Il suffit d'ajouter de nouveaux services dans le même fichier compose.
 
-* Développement local
-  - Compose propose des commandes comme `docker compose logs` et `docker compose restart` qui sont plus pratiques que leurs équivalents Docker.
-  - Cela facilite également le partage de la configuration du projet avec d'autres développeurs.
+### Le compose.yaml
 
-Donc ecrivez un compose.yaml avec
+Donc écrivez un `compose.yaml` avec
 
 - un seul service appelé `discord-bot`
-- construit à partir du Dockerfile (et qui ne part pas d'une image)
-- avec les volumes adéquats
+- construit à partir du Dockerfile (et qui ne part pas d'une image) (`build` .)
+- avec les volumes adéquats. Comme il n'y a que 2 fichiers (src/main/py et requirements.txt), on peut les monter un a un.
 - et la variable d'environnement `DISCORD_TOKEN`
 
 
@@ -207,6 +197,8 @@ La commande suivante permet de vérifier que le fichier est bien écrit
 docker compose -f compose.yaml config
 ```
 
+#### docker compose -f compose.yaml config
+
 Lorsque vous exécutez `docker compose -f compose.yaml config`, Docker Compose :
 
 - Analyse le fichier et vérifie la syntaxe et la structure.
@@ -214,7 +206,11 @@ Lorsque vous exécutez `docker compose -f compose.yaml config`, Docker Compose :
 - Combine les configurations si plusieurs fichiers Compose sont utilisés.
 - Affiche la configuration finale.
 
-En cas d'erreur (syntaxe, champs manquants, configurations non prises en charge), la commande les signalera. En résumé, cette commande valide le fichier et affiche la configuration finale, en indiquant les éventuelles erreurs.
+En cas d'erreur (syntaxe, champs manquants, configurations non prises en charge), la commande les signalera.
+
+En résumé, cette commande valide le fichier et affiche la configuration finale, en indiquant les éventuelles erreurs.
+
+### Lancer le bot
 
 Et vous pouvez bien entendu lancer le bot avec
 
@@ -224,124 +220,27 @@ docker compose up
 
 ### Inviter le bot sur le server discord
 
-Pour que le bot devienne actif, il faut l'autoriser  et l'inviter
-
-1. Go back to the Discord Developer Portal
-2. Go to the "OAuth2" tab, then "URL Generator"
-3. Select "bot" under "Scopes"
-4. Choose the permissions you want your bot to have
-5. Copy the generated URL and open it in a browser
-6. Select the server you want to add the bot to and authorize it
-
-Your bot should now be running and connected to your Discord server!
-
-[TODO] verifier que le student peut ajouter le bot au server!
-
-1216407543622926357
-
-https://discord.com/api/oauth2/authorize?client_id=BOT_CLIENT_ID&permissions=PERMISSIONS_NUMBER&scope=bot
+Pour que le bot devienne actif, il faut l'autoriser et l'inviter
 
 
-### ajouter des fonctinonalités
+1. Retournez sur le Portail Développeur Discord
+2. Allez dans l'onglet "OAuth2", puis "URL Generator"
+3. Sélectionnez "bot" sous "Scopes"
+4. Choisissez les permissions que vous souhaitez donner à votre bot
+5. Copiez l'URL générée et copiez la dans le channel #bot-playground
+6. A ce stade il faut que j'admette le bot sur le server
 
-A ce stade vous pouvez ajouter toutes les fonctionnalités que vous souhaitez
+
+<!-- 7. Copiez l'URL générée et ouvrez-la dans un navigateur
+8. Sélectionnez le serveur auquel vous voulez ajouter le bot et autorisez-le -->
 
 
-### Other services that could be useful for a more complex bot
 
-Here's an enhanced `compose.yaml` with additional services commonly useful for Discord bots:
+#### Examples de services complémentaires
 
-```yaml
-version: '3'
-services:
-  discord-bot:
-    build: .
-    environment:
-      - DISCORD_TOKEN=${DISCORD_TOKEN}
-    depends_on:
-      - redis
-      - db
+Le bot est simple mais on peut ajouter deds serviue en les definissant dans le compose.yaml.
 
-  # Cache for rate limiting, cooldowns, temporary data
-  redis:
-    image: redis:alpine
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis-data:/data
-
-  # Database for persistent data (user preferences, server settings, etc)
-  db:
-    image: postgres:14-alpine
-    environment:
-      - POSTGRES_DB=discord_bot
-      - POSTGRES_USER=bot_user
-      - POSTGRES_PASSWORD=${DB_PASSWORD}
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-
-  # Optional: Admin panel to manage bot data
-  adminer:
-    image: adminer
-    ports:
-      - "8080:8080"
-    depends_on:
-      - db
-
-  # Optional: Monitoring
-  prometheus:
-    image: prom/prometheus
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    ports:
-      - "9090:9090"
-
-  grafana:
-    image: grafana/grafana
-    ports:
-      - "3000:3000"
-    depends_on:
-      - prometheus
-
-volumes:
-  redis-data:
-  postgres-data:
-```
-
-Here's why each service could be useful:
-
-1. Redis:
-   - Managing command cooldowns
-   - Caching API responses
-   - Temporary data storage
-   - Rate limiting implementation
-   - Queue system for music bots
-
-2. PostgreSQL:
-   - Storing server configurations
-   - User preferences and statistics
-   - Economy system data
-   - Persistent leaderboards
-   - Custom commands storage
-
-3. Adminer:
-   - Web interface to manage database
-   - Useful for debugging and data management
-   - Easy way to view and modify bot data
-
-4. Prometheus + Grafana:
-   - Monitor bot performance
-   - Track command usage
-   - Monitor memory/CPU usage
-   - Create dashboards for:
-     - Active servers
-     - Command popularity
-     - Error rates
-     - Response times
-
-Additional services you might consider depending on your bot's features:
+Voici quelques exemples potentiels.
 
 ```yaml
   # For music bots
@@ -372,27 +271,15 @@ Additional services you might consider depending on your bot's features:
       - "15672:15672"
 ```
 
-### Multi stage builds
-
-https://chatgpt.com/c/671a7937-6e50-800e-a00a-6680e74eecbe
-
-https://claude.ai/chat/d57aecc0-d6db-4e12-96ba-a76174503025
-
-On peut optimiser le docker file avec un build multi stage.
-
-Le multi stage build consiste à supprimer les fichiers qui ont été crées lors des installs pour réduire la taille finale de l'image et du container.
 
 
-Voici ce que ca donnerait pour notre Dockerfile
+## Déploiement avec GitHub Actions
 
-```yaml
-```
+On va déployer le bot sur le serveur
 
-Mais il est assez evident que dans notre cas assez simple, le gain de taille obtenu avec un build multi stage est assez limité.
 
-## GitHub Actions Setup
 
-1. Create a `.github/workflows/deploy.yml` file in your repository:
+Créez le fichier `.github/workflows/deploy.yml`  avec le contenu:
 
 ```yaml
 name: Deploy Discord Bot
@@ -433,102 +320,32 @@ jobs:
           docker run -d --name discord-bot -e DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }} yourdockerhubusername/discord-bot:latest
 ```
 
-2. Set up secrets in your GitHub repository:
+## Set up secrets in your GitHub repository:
 
 - DOCKERHUB_USERNAME
 - DOCKERHUB_TOKEN
+- DISCORD_TOKEN
 - SERVER_HOST
 - SERVER_USERNAME
 - SERVER_SSH_KEY
-- DISCORD_TOKEN
 
-## validate, lint, test Dockerfile and compose.yaml
+la clef SERVER_SSH_KEY est dans le document
 
-Yes! You can use GitHub Actions to validate and test both your Dockerfile and compose.yaml files. Here's a comprehensive GitHub Actions workflow:
+https://docs.google.com/document/d/1BUbD0M-3UkMHywpC3a7wgjDt-Bamj7dWZLDrk5o_dYc/edit?tab=t.0
+
+le SERVER_HOST est : 161.35.90.136
+
+SERVER_USERNAME: root
 
 
 
-```yaml
-name: Docker Validation
 
-on:
-  push:
-    paths:
-      - 'Dockerfile'
-      - 'docker-compose.yaml'
-      - '.github/workflows/docker-validate.yml'
-  pull_request:
-    paths:
-      - 'Dockerfile'
-      - 'docker-compose.yaml'
-      - '.github/workflows/docker-validate.yml'
+### Version 3: Linting et validation
 
-jobs:
-  validate:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+dans deploy.yml
 
-      - name: Validate Docker Compose file
-        uses: docker/compose-cli@v2
-        with:
-          command: config
-          file: ./docker-compose.yaml
 
-      - name: Install Hadolint
-        run: |
-          curl -Lo hadolint https://github.com/hadolint/hadolint/releases/download/v2.12.0/hadolint-Linux-x86_64
-          chmod +x hadolint
-          sudo mv hadolint /usr/local/bin/
 
-      - name: Lint Dockerfile
-        run: hadolint Dockerfile
-
-      - name: Test Docker build
-        run: docker build -t test-image .
-
-  security-scan:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: 'config'
-          scan-ref: '.'
-          format: 'table'
-
-      - name: Run Snyk to check Docker image for vulnerabilities
-        uses: snyk/actions/docker@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          image: test-image
-          args: --file=Dockerfile
-
-  compose-test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Create env file
-        run: |
-          echo "DISCORD_TOKEN=dummy-token" > .env
-          echo "DB_PASSWORD=dummy-password" >> .env
-
-      - name: Test Compose Up
-        run: |
-          docker compose up -d
-          sleep 10  # Wait for services to start
-          docker compose ps --format json
-          docker compose logs
-          docker compose down
-
-```
 
 This workflow provides several layers of validation:
 
