--- a/docs/07/S07.01.intro.md
+++ b/docs/07/S07.01.intro.md
@@ -6,11 +6,11 @@ Après docker et docker compose, voici Kubernetes
 
 Ce matin: Kubernetes, les concepts, les elements et outils, les besoins et cas d'utilisation
 
-Debut d'après midi un petit quizz sur Docker et Docker compose (15mn) qui comptera dans la note finale
+Debut d'après midi un petit quizz sur Docker et Docker compose (20mn) qui comptera dans la note finale
 
-Pour finir on va construire un cluster maison.
+Pour cette après midi on va construire un cluster maison.
 
-Kubernetes fait sense dans un contexte cloud multi servers.
+Kubernetes fait sens dans un contexte cloud multi servers.
 
 Comme nous n'avons pas accès au cloud, nous allons utiliser vos laptops pour construire un cluster K8s
 
