--- a/docs/08/S08.01.workshop.md
+++ b/docs/08/S08.01.workshop.md
@@ -4,7 +4,7 @@ On va construire des clusters
 au lieu d'avoir des serveurs sur le cloud
 on va utiliser nos ordi comme autant de serveurs
 
-L'idee etant d'avoir
+L'idée étant d'avoir
 
 - un ordi principal : parent
 - des ordi workers : enfants
