--- a/docs/08/S08.01.workshop.md
+++ b/docs/08/S08.01.workshop.md
@@ -1,4 +1,4 @@
-# Workshop:  système de monitoring distribué.
+# Workshop:  système de monitoring distribué
 
 On va construire des clusters
 au lieu d'avoir des serveurs sur le cloud
@@ -11,7 +11,7 @@ L'idée étant d'avoir
 
 L'application est de récupérer les infos de fonctionnement des ordi enfants (temperature, cpu etc ...)  et de les afficher dans un dashboard sur l'ordi parent.
 
-On travaille en groupe de 4.
+On travaille en groupe de 2,3,4.
 
 ## Etapes
 
@@ -39,7 +39,7 @@ Voici les étapes, de la configuration réseau à la mise en place complète du 
 1. **Installer Minikube (ou Kind) sur Chaque Ordinateur :**
    - Installez **Minikube** ou **Kind** sur les ordinateurs Windows et Mac. Ces outils simplifient la création de clusters locaux.
    - **Minikube** : Chaque ordinateur doit avoir Minikube pour créer des clusters locaux agissant comme nodes Kubernetes.
-   - **Kind** peut aussi être utilisé si les étudiants sont à l’aise avec Docker, puisqu’il utilise des containers Docker pour exécuter les nodes Kubernetes.
+   - **Kind** peut aussi être utilisé  puisqu’il utilise des containers Docker pour exécuter les nodes Kubernetes.
 
 2. **Configurer l'Ordinateur Parent comme le Maître Kubernetes :**
    - L'ordinateur parent servira de plan de contrôle Kubernetes.
@@ -125,7 +125,7 @@ Voici les étapes, de la configuration réseau à la mise en place complète du 
    - Discutez des défis rencontrés lors de la configuration, des techniques de dépannage, et de l’utilisation pratique de Kubernetes dans un système de monitoring distribué.
    - Encouragez les étudiants à réfléchir sur la manière dont ce type de configuration pourrait être utilisé dans d'autres cas concrets.
 
-### Vue d’Ensemble des Outils et Technologies :
+### Vue d’Ensemble des Outils et Technologies
 
 - **Kubernetes** : Orchestration des nodes parent et enfants.
 - **Minikube/Kind** : Pour créer des clusters Kubernetes locaux.
@@ -133,4 +133,3 @@ Voici les étapes, de la configuration réseau à la mise en place complète du 
 - **Grafana** : Pour visualiser les métriques dans un tableau de bord.
 - **Helm** : Pour faciliter le déploiement de Prometheus et Grafana.
 - **Outils de Stress** (`stress-ng`) : Pour générer de la charge CPU sur les nodes enfants pour les tests.
-
